deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cofrap-front
  labels:
    app: cofrap-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cofrap-front
  template:
    metadata:
      labels:
        app: cofrap-front
    spec:
      containers:
        - name: front
          image: ritacarrilho/cofrap-front:latest
          ports:
            - containerPort: 80
