service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cofrap-front
spec:
  type: ClusterIP
  selector:
    app: cofrap-front
  ports:
    - port: 80
      targetPort: 80
